--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         function postTodo() {
             let todoText = document.querySelector("#todo").value
 
-            axios.post(`http://localhost:3000/todo`, {
+            axios.post(`https://energetic-cyan-seal.cyclic.app/todo`, {
                     text: todoText
 
                 })
